Nanampy affichage score

--- a/Foot.csproj
+++ b/Foot.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Foot</RootNamespace>
+    <StartupObject>Foot.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
